# Assignment

./: .gitignore  README.md  apt_list  make_font_dataset.sh  pip_packages  repo.keys  sources.list  timetable.md  zshrc
ABA/: Advanced_BiomolecularArchitecture.ppt
Algorithm/: a.out  test_mod.c
BEC/: 23.ppt  IEC-103-BEC-TutorialSheet-05.pdf.tgz  IEC-103-BEC-TutorialSheet-07-Solutions.pdf.tgz
Blockchain-Vyper-Auction/: README.md  package-lock.json  package.json
CSO/: MIPS-Assembly.ppt  mips-assembly.tar
DIP/: 03.md
DS/: 23-ssspaths.ppt  BIT.cpp  LCA.ppt  Resume.docx  kruskals.cpp  lca.cpp  lec29.ppt  p1.c  p11.c  p2.c  p20.c  p20_bfs.c  p21.c  p21_bit.c  p21_gen.cpp  p22_rand.cc  p23_expo.c  p24.c  p25.c  p27b.c  p3.c  p31.cc  p32.cc  p4.c  p5.c  p6.c  p7.c  p8.c  rmq.cpp
Database/: grant
Distributed_Systems/: moss
EngSys/: Assignment1.md  Systems Architecture III.pptx
Graphics/: .editorconfig  .gitignore
Graphics/Assignmet1/tut_19_01/: CMakeLists.txt  README.md
Graphics/Assignmet1/tut_19_01/src/: Sample_GL.vert  ball.cpp  ball.h  color.cpp  input.cpp  main.cpp  main.h  nonedit.cpp  other_handlers.cpp  timer.cpp  timer.h
ITWS/: ass_3.rkt  main.org  racket.org
ITWS2/: itws_ass  itws_ass_2  itws_ass~
Intro_AI/: Monte_Carlo_Search_Tree.ipynb
Maths/: Binomial Random Variables.pptx  Contour Integrals 2.pptx  Contour Integration.pptx  Line integrals.pptx  Power Series.pptx  Random Variables.pptx  Singularities and Residuesfinal.pptx  The Normal Distribution1.pptx  complex_regions.ppt  practice problems From Kreyszig.docx  probabilitylecture1.pptx  (+1 more)
(+1959 files in other folders)
